# hop

./: .gitignore  .rusty-hook.toml  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: audit.yml  lint.yml  tests.yml
benches/: protocol.rs
cli/: Cargo.toml
cli/lib/: Cargo.toml
cli/lib/src/: lib.rs  parse.rs  print.rs  process.rs
cli/src/: input.rs  main.rs
client/: Cargo.toml
client/src/: lib.rs  model.rs
client/src/backend/: memory.rs  mod.rs  server.rs
client/src/request/: decrement.rs  delete.rs  echo.rs  exists.rs  increment.rs  is.rs  keys.rs  length.rs  mod.rs  rename.rs  stats.rs  type.rs
client/src/request/append/: append_bytes.rs  append_list.rs  append_string.rs  mod.rs
client/src/request/decrement/: decrement_float.rs  decrement_int.rs  mod.rs
client/src/request/get/: get_boolean.rs  get_bytes.rs  get_float.rs  get_integer.rs  get_list.rs  get_map.rs  get_set.rs  get_string.rs  mod.rs
client/src/request/increment/: increment_float.rs  increment_int.rs  mod.rs
client/src/request/set/: mod.rs  set_boolean.rs  set_bytes.rs  set_float.rs  set_integer.rs  set_list.rs  set_map.rs  set_set.rs  set_string.rs  set_value.rs
engine/: Cargo.toml
engine/benches/: bench_command.rs  bench_protocol.rs
engine/src/: hop.rs  lib.rs  metrics.rs  pool.rs
engine/src/command/: command_id.rs  error.rs  mod.rs  request.rs  response.rs
engine/src/command/impl/: append.rs  decrement.rs  decrement_by.rs  delete.rs  echo.rs  exists.rs  get.rs  increment.rs  increment_by.rs  is.rs  keys.rs  length.rs  mod.rs  prelude.rs  rename.rs  set.rs  stats.rs  type.rs
engine/src/command/request/: builder.rs  context.rs  mod.rs
engine/src/command/response/: context.rs  mod.rs
engine/src/pubsub/: key_update.rs  manager.rs  mod.rs
engine/src/session/: manager.rs  mod.rs
engine/src/state/: mod.rs  object.rs  value.rs
lib/: Cargo.toml
lib/benches/: bench_protocol.rs
lib/metrics/: Cargo.toml
lib/metrics/src/: lib.rs
lib/src/: lib.rs  pool.rs  utils.rs
lib/src/command/: command_id.rs  error.rs  kind.rs  mod.rs  protocol.rs  request.rs  response.rs
lib/src/command/impl/: append.rs  decrement_by.rs  decrement_int.rs  decrement_int_by.rs  echo.rs  increment_by.rs  increment_int.rs  increment_int_by.rs  length.rs  mod.rs  ping.rs  prelude.rs  stats.rs  string_length.rs
lib/src/pubsub/: key_update.rs  manager.rs  mod.rs
lib/src/session/: manager.rs  mod.rs
lib/src/state/: do.rs  error.rs  mod.rs  object.rs  value.rs
lib/timer/: Cargo.toml
lib/timer/benches/: bench.rs
lib/timer/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
