[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["database"]
description = "CLI to communicate with Hop database instances or test commands and procedures."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop-cli"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
hop = { path = "../client" }
hop-engine = { path = "../engine" }
tokio = { default-features = false, features = ["io-std", "io-util", "macros", "rt-threaded"], version = "^0.2.20" }
