[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["api-bindings", "asynchronous", "command-line-utilities", "database"]
description = "Client to communicate with a Hop database instance or use Hop locally in-process."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
async-std = "^1.5.0"
async-trait = "^0.1.30"
hop-lib = { path = "../lib" }

[dev-dependencies]
async-std = { default-features = true, features = ["attributes"], version = "^1.5.0" }
