[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["api-bindings", "asynchronous", "command-line-utilities", "database"]
description = "Client to communicate with a Hop database instance or use Hop locally in-process."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
tokio = { default-features = false, features = ["io-util", "net", "sync"], version = "^0.2.20" }
async-trait = "^0.1.30"
hop-lib = { path = "../lib" }

[dev-dependencies]
tokio = { default-features = false, features = ["io-util", "net", "sync"], version = "^0.2.20" }
