[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["api-bindings", "asynchronous", "command-line-utilities", "database"]
description = "Client to communicate with a Hop database instance or use Hop locally in-process."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
async-trait = { default-features = false, version = "^0.1.30" }
dashmap = { default-features = false, version = "^3.11.1" }
hop-engine = { default-features = false, path = "../engine" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { default-features = false, features = ["io-util", "net", "sync"], optional = true, version = "^0.2.20" }

[dev-dependencies]
static_assertions = { default-features = false, version = "^1.1.0" }
tokio = { default-features = false, features = ["io-util", "macros", "net", "sync"], version = "^0.2.20" }

[features]
default = ["std", "tokio"]
std = []
