[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["asynchronous", "database-implementations", "no-std"]
description = "Feature implementations for the Hop database. Not meant to be used directly."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop-engine"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
dashmap = { default-features = false, version = "^3.11.1" }
futures-intrusive = { default-features = false, features = ["alloc"], version = "^0.3.1" }
log = { default-features = false, optional = true, version = "0.4" }

[features]
default = ["log"]

[dev-dependencies]
tokio = { default-features = false, features = ["macros", "rt-threaded"], version = "^0.2.21" }
