[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["asynchronous", "database-implementations", "no-std"]
description = "Feature implementations for the Hop database. Not meant to be used directly."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop-engine"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
arrayvec = { default-features = false, features = ["array-sizes-129-255"], version = "0.5" }
dashmap = { default-features = false, version = "3" }
futures-intrusive = { default-features = false, features = ["alloc"], version = "0.3" }
hop-internal-metrics = { default-features = false, path = "../lib/metrics" }
log = { default-features = false, optional = true, version = "0.4" }

[features]
default = ["log"]

[dev-dependencies]
static_assertions = { default-features = false, version = "^1.0.0" }
tokio = { default-features = false, features = ["macros", "rt-threaded"], version = "0.2" }
