[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
edition = "2018"
name = "hop-lib"
version = "0.1.0"

[dependencies]
dashmap = { default-features = true, version = "^3.11.1" }
futures-intrusive = { default-features = false, features = ["alloc"], version = "^0.3.1" }
futures-core = { default-features = false, version = "^0.3.4" }
log = { default-features = false, version = "0.4" }
