[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["command-line-utilities"]
description = "Application to run a server instance of the Hop database."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop-server"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
env_logger = { default-features = false, version = "0.7" }
log = { default-features = false, version = "0.4" }
hop-engine = { default-features = false, path = "../engine" }
tokio = { default-features = false, features = ["blocking", "io-util", "macros", "net", "rt-threaded", "stream"], version = "0.2" }

[dev-dependencies]
rusty-hook = { default-features = false, version = "0.11" }
