[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["database"]
description = "CLI to communicate with Hop database instances or test commands and procedures."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["cache", "database", "db", "hop", "hopdb"]
license = "ISC"
name = "hop-cli-lib"
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
hop = { default-features = false, features = ["std"], path = "../../client" }
hop-engine = { default-features = false, path = "../../engine" }

[lib]
name = "hop_cli"
