[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["no-std"]
description = "A simple and fast no-std no-alloc high resolution timer."
edition = "2018"
homepage = "https://github.com/hopdb/hop"
keywords = ["timer"]
license = "ISC"
name = "hop-internal-timer"
publish = false
readme = "README.md"
repository = "https://github.com/hopdb/hop.git"
version = "0.1.0"

[dependencies]
libc = { default-features = false, version = "0.2" }

[features]
default = []
__internal_test = []
